Fixed an issue where a horizontal scrollbar would appear in the code block when it didn't need to

--- a/blocks/code/code.css
+++ b/blocks/code/code.css
@@ -351,7 +351,6 @@ pre[id].linkable-line-numbers span.line-numbers-rows>span:hover:before {
 /* MODIFIED: added the three rules below */
 div.line {
     padding-left: 3.8em;
-    width: 100%;
     overflow:auto;
 }
 
